syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

// 기본 포맷
message Greeting {
    string first_name = 1;
    string last_name = 2;
}

// 요청 포맷
message GreetRequest {
    Greeting greeting = 1;
}

// 응답 포맷
message GreetResponse {
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}

service GreetService {
    // Unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}
